[gd_scene load_steps=11 format=2]

[ext_resource path="res://Image/519G7ASRCQL._SY445_.png" type="Texture" id=1]
[ext_resource path="res://Image/BombermanR_White.png" type="Texture" id=2]
[ext_resource path="res://Image/background.jpg" type="Texture" id=3]
[ext_resource path="res://font/Evogria.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Script/Menu.gd" type="Script" id=5]
[ext_resource path="res://Image/huongdanchoi.PNG" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_color = Color( 0.92549, 1, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 4 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="Sprite" parent="."]
position = Vector2( 415.646, 210.094 )
scale = Vector2( 1.33021, 0.987559 )
texture = ExtResource( 3 )

[node name="BombermanR_White" type="Sprite" parent="background"]
position = Vector2( 156.633, 40.4088 )
scale = Vector2( 0.21306, 0.173925 )
texture = ExtResource( 2 )

[node name="519G7ASRCQL_SY445_" type="Sprite" parent="background/BombermanR_White"]
position = Vector2( -762.136, -943.17 )
scale = Vector2( 5.48408, 9.47947 )
texture = ExtResource( 1 )

[node name="menu" type="Node2D" parent="."]

[node name="play" type="Button" parent="menu"]
margin_left = 160.0
margin_top = 152.0
margin_right = 320.0
margin_bottom = 219.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.243137, 0, 1, 1 )
text = "Play"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="how to play" type="Button" parent="menu"]
margin_left = 96.0
margin_top = 224.0
margin_right = 386.0
margin_bottom = 291.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.243137, 0, 1, 1 )
text = "How to play"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="Button" parent="menu"]
margin_left = 152.0
margin_top = 296.0
margin_right = 320.0
margin_bottom = 363.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.243137, 0, 1, 1 )
text = "Quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="how_to_play" type="Node2D" parent="."]
visible = false

[node name="huongdanchoi" type="Sprite" parent="how_to_play"]
position = Vector2( 264, 224 )
scale = Vector2( 1.2381, 1.05263 )
texture = ExtResource( 6 )

[node name="back" type="Button" parent="how_to_play"]
margin_left = 184.0
margin_top = 328.0
margin_right = 308.0
margin_bottom = 395.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.729412, 0.00392157, 0.356863, 1 )
text = "Back"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="menu/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="menu/how to play" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="menu/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="how_to_play/back" to="." method="_on_back_pressed"]
